--- a/package.json
+++ b/package.json
@@ -15,30 +15,34 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
+    "ag-grid-community": "^31.0.0",
+    "ag-grid-react": "^31.0.0",
     "autoprefixer": "^10.4.21",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.544.0",
+    "papaparse": "^5.4.1",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
+    "react-is": "^19.2.0",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.14",
-    "yahoo-finance2": "2.13.3",
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "yahoo-finance2": "2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "concurrently": "^9.0.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "concurrently": "^9.0.0"
+    "vite": "^7.1.7"
   }
 }
