--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
-    "ag-grid-community": "^34.0.0",
-    "ag-grid-react": "^34.0.0",
+    "ag-grid-community": "32.2.0",
+    "ag-grid-react": "32.2.0",
     "autoprefixer": "^10.4.21",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -25,8 +25,8 @@
     "lucide-react": "^0.544.0",
     "papaparse": "^5.4.1",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^16.0.0",
     "react-is": "^19.2.0",
     "recharts": "^3.2.1",
