UI/UX: fix AgGrid pinned rows formatting for TOP N; resolve 'Invalid Number' in pinned rows; update i18n and layout; dev server workflow tweaks

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ SERVE_DIST=true
 NODE_ENV=production
 # Porta do servidor.
 PORT=3001
+# API key para fallback de dados intraday via Alpha Vantage (opcional)
+# Obtenha uma chave gratuita em https://www.alphavantage.co/support/#api-key
+ALPHA_VANTAGE_API_KEY=ZPQOAZ10M4C897K5
 
 # Como usar:
 # - Copie este arquivo para .env.development e/ou .env.production conforme o ambiente.
