feat(csv): centralizar CSVs em subdiretório e exibir diretório no frontend\n\n- Backend: adiciona CSV_DIR, migra CSVs para 'csv/', inclui baseDir em /api/latest-csv\n- Gerador: aceita --csv-dir e salva/lê dentro do diretório configurado\n- Frontend: indicador 'Diretório CSV' e log do caminho ao finalizar\n- Docs: README atualizado com CSV_DIR e comportamento de migração\n\nCo-authored-by: Trae AI

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "gen:153": "node scripts/generate_153_stock_analysis.mjs",
     "server": "node server.mjs",
-    "dev:full": "concurrently -k \"npm:server\" \"vite\""
+    "dev:full": "concurrently -k \"npm:server\" \"vite\"",
+    "start:all": "npm run dev:full"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
